--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,10 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:28.0-jre'
 
-    // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+    compile 'io.kubernetes:client-java:5.0.0'
+    compile 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+
+    testCompile 'org.slf4j:slf4j-simple:1.7.28'
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
