--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     compile 'org.junit.jupiter:junit-jupiter-api:5.4.2'
 
     testCompile 'org.slf4j:slf4j-simple:1.7.28'
+    testCompile 'org.mockito:mockito-junit-jupiter:3.0.0'
+    testCompile 'org.assertj:assertj-core:3.13.2'
+
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
